add issue 96 and issue 95 contents, still needs to fix unit tests